--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
         <%- include header %>
     </head>
     <body>
+    <%- include nav %>
         <div class="text-center page-title"><%= title %></div>
     </body>
 </html>
