--- a/views/post.ejs
+++ b/views/post.ejs
@@ -4,6 +4,25 @@
     <%- include header %>
 </head>
 <body>
-<div class="text-center page-title"><%= title %></div>
+    <%- include nav %>
+    <div class="text-center page-title"><%= title %></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-4 col-xs-offset-4">
+                <form method="post">
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="title" placeholder="标题">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="tag" placeholder="标签">
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" name="content" placeholder="文章内容"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-default center-block">发表</button>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
