--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <%- include header %>
-</head>
-<body>
-    <%- include nav %>
-    <div class="text-center page-title"><%= title %></div>
-    <div class="container">
-        <div class="row">
-            <% arts.forEach(function(art) { %>
-            <div class="col-xs-8 col-xs-offset-2">
-                <div class="article-box">
-                    <a href="/detail/<%= art._id %>">
-                        <h3 class="text-center"><%= art.title %></h3>
-                    </a>
-                    <p class="text-center">
-                        <span class="label label-info"><%= art.tag %></span> |
-                        <span class="create-time">
-                            <span class="text-bold">时间:</span>
-                            <%= art.createTime %>
-                        </span>
-                    </p>
-                    <p><%= art.content %></p>
-                </div>
+	<head>
+		<%- include header %>
+	</head>
+	<body>
+		<%- include navbar %>
+        <div class="container content">
+			<div class="text-center page-title"><%= title %></div>
+            <div class="row">
+            	<div class="col-xs-8 col-xs-offset-2">
+            	    <div class="article-box">
+                			<h1 class="text-center"><%= art.title %></h1>
+                		<p class="text-center">
+                		    <span class="label label-info"><%= art.tag %></span> | 
+                			<span class="create-time">
+                				<span class="text-bold">时间:</span>
+                				<%= moment(art.createTime).locale('zh-cn').format('LL HH:mm:ss') %>
+                			</span>
+                		</p>
+                		<p><%= art.content %></p>
+            		</div>
+            	</div>
             </div>
-            <% }); %>
         </div>
-    </div>
-</body>
+		<%- include footer %>
+    </body>
 </html>
