--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,22 +4,25 @@
         <%- include header %>
     </head>
     <body>
-        <%- include nav %>
-        <div class="text-center page-title"><%= title %></div>
-        <div class="container">
+        <%- include navbar %>
+        <div class="container content">
+            <div class="text-center page-title"><%= title %></div>
             <div class="row">
                 <div class="col-xs-4 col-xs-offset-4">
                     <form method="post">
-                        <div class="form-group">
-                            <input type="text" class="form-control" name="username" placeholder="用户名">
-                        </div>
-                        <div class="form-group">
-                            <input type="password" class="form-control" name="password" placeholder="密码">
-                        </div>
-                        <button type="submit" class="btn btn-default center-block">登录</button>
+                    	<div class="form-group">
+                    		<input type="text" class="form-control" name="username" placeholder="用户名">
+                    	</div>
+                    
+                    	<div class="form-group">
+                    		<input type="password" class="form-control" name="password" placeholder="密码">
+                    	</div>
+                    
+                    	<button type="submit" class="btn btn-default center-block">登录</button>
                     </form>
                 </div>
             </div>
         </div>
+        <%- include footer %>
     </body>
 </html>
