--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <%- include header %>
-</head>
-<body>
-<%- include nav %>
-    <div class="text-center page-title"><%= title %></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-4 col-xs-offset-4">
-                <form method="post">
-                    <div class="form-group">
-                        <input type="text" class="form-control" name="username" placeholder="用户名">
-                    </div>
-                    <div class="form-group">
-                        <input type="password" class="form-control" name="password" placeholder="密码">
-                    </div>
-                    <div class="form-group">
-                        <input type="password" class="form-control" name="passwordRepeat" placeholder="确认密码">
-                    </div>
-                    <button type="submit" class="btn btn-default center-block">注册</button>
-                </form>
+	<head>
+		<%- include header %>
+	</head>
+	<body>
+		<%- include navbar %>
+        <div class="container content">
+			<div class="text-center page-title"><%= title %></div>
+            <div class="row">
+                <div class="col-xs-4 col-xs-offset-4">
+                    <form method="post">
+                    	<div class="form-group">
+                    		<input type="text" class="form-control" name="username" placeholder="用户名">
+                    	</div>
+                    	<div class="form-group">
+                    		<input type="password" class="form-control" name="password" placeholder="密码">
+                    	</div>
+                    	<div class="form-group">
+                    		<input type="password" class="form-control" name="passwordRepeat" placeholder="确认密码">
+                    	</div>
+                    	<button type="submit" class="btn btn-default center-block">注册</button>
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
-</body>
+		s<%- include footer %>
+    </body>
 </html>
