--- a/views/post.ejs
+++ b/views/post.ejs
@@ -12,17 +12,17 @@
                     <form method="post">
 
                     	<div class="form-group">
-                    		<input type="text" class="form-control" name="title" placeholder="标题">
+                    		<input type="text" class="form-control" name="title" placeholder="Post title">
                     	</div>
                     
                     	<div class="form-group">
-                    		<input type="text" class="form-control" name="tag" placeholder="标签">
+                    		<input type="text" class="form-control" name="tag" placeholder="Post tag">
                     	</div>
                         <div class="form-group">
-                    	    <textarea class="form-control" name="content" placeholder="文章内容"></textarea>
+                    	    <textarea class="form-control" name="content" placeholder="Post Content"></textarea>
                 	    </div>
                     
-                    	<button type="submit" class="btn btn-default center-block">发表</button>
+                    	<button type="submit" class="btn btn-default center-block">Post</button>
                     </form>
                 </div>
             </div>
