--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,8 +17,8 @@
                     		<p class="text-center">
                     		    <span class="label label-info"><%= art.tag %></span> | 
                     			<span class="create-time">
-                    				<span class="text-bold">时间:</span>
-                    				<%= moment(art.createTime).locale('zh-cn').format('LL HH:mm:ss') %>
+                    				<span class="text-bold">Created Time:</span>
+                    				<%= moment(art.createTime).format('LL HH:mm:ss') %>
                     			</span>
                     		</p>
                     		<p><%= art.content %></p>
