--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,14 +11,14 @@
                 <div class="col-xs-4 col-xs-offset-4">
                     <form method="post">
                     	<div class="form-group">
-                    		<input type="text" class="form-control" name="username" placeholder="用户名">
+                    		<input type="text" class="form-control" name="username" placeholder="Username">
                     	</div>
                     
                     	<div class="form-group">
-                    		<input type="password" class="form-control" name="password" placeholder="密码">
+                    		<input type="password" class="form-control" name="password" placeholder="Password">
                     	</div>
                     
-                    	<button type="submit" class="btn btn-default center-block">登录</button>
+                    	<button type="submit" class="btn btn-default center-block">Login</button>
                     </form>
                 </div>
             </div>
