--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,15 +11,15 @@
                 <div class="col-xs-4 col-xs-offset-4">
                     <form method="post">
                     	<div class="form-group">
-                    		<input type="text" class="form-control" name="username" placeholder="用户名">
+                    		<input type="text" class="form-control" name="username" placeholder="Username">
                     	</div>
                     	<div class="form-group">
-                    		<input type="password" class="form-control" name="password" placeholder="密码">
+                    		<input type="password" class="form-control" name="password" placeholder="Password">
                     	</div>
                     	<div class="form-group">
-                    		<input type="password" class="form-control" name="passwordRepeat" placeholder="确认密码">
+                    		<input type="password" class="form-control" name="passwordRepeat" placeholder="Confirm password">
                     	</div>
-                    	<button type="submit" class="btn btn-default center-block">注册</button>
+                    	<button type="submit" class="btn btn-default center-block">Register</button>
                     </form>
                 </div>
             </div>
